# DaltonLens-Research

./: .gitattributes  .gitignore  README.md  TODO  requirements.txt  setup.cfg
AppStore/: Highlighting_Video-Compressed.mov  Highlighting_Video.mov
charts/: README.md  evaluate_model.py  experiments1.ipynb  generate_opencv_gt_images.py  next_train.py  setup.cfg  show_evaluation_results.sh  unalias_image.py
charts/.ipynb_checkpoints/: Color Plotting-checkpoint.ipynb
charts/common/: dataset.py  utils.py
charts/dlcharts/: __init__.py
charts/dlcharts/common/: __init__.py  cvlog.py  dataset.py  datasets.py  timer.py  utils.py
charts/dlcharts/evaluation/: similar_colors.py
charts/dlcharts/pytorch/: __init__.py  color_regression.py  drawing_segmentation.py  fastai_layers.py  layers.py  lightning.py  losses.py  models.py  models_regression.py  models_regression_gated.py  segmentation_transforms.py  utils.py
charts/evaluation/: similar_colors.py
charts/fastai/: unet_fastai.ipynb
charts/handwritten/parse_chart_v1/: parse_chart_v1.cpp
charts/handwritten/parse_chart_v2/: CMakeLists.txt  Utils.cpp  dl_quantization.h
charts/inputs/: README.md
charts/inputs/arxiv/: README.md  add_bgcolor_to_dataset.py  dataset_from_figures.py  extract_arxiv_figures.py  (+5 more)
charts/inputs/generate_plots/gt_from_pairs/: CMakeLists.txt  Utils.cpp  dl_opencv.h  main.cpp
charts/inputs/generate_plots/gt_from_pairs/zv/: Client.cpp  subprocess.h
charts/models/: regression_unet_v1.pt
charts/notebooks/: generate_mpl.ipynb
charts/parse_chart_v1/: CMakeLists.txt
charts/parse_chart_v2/: CMakeLists.txt  dl_opencv.h  dl_quantization.h  parse_chart_v2.cpp
charts/pretrained/: README.md  regression_unetres_v1_scripted.pt  regression_unetres_v3_scripted.pt  regression_unetres_v4.onnx  regression_unetres_v4_scripted.pt  v4_gated_unet-rn18-rn18_mse_bn32_5e-3_1e-5.pt
charts/pytorch/: color_regression.py  drawing_segmentation.py  export_to_torchscript.py  similar_colors.py  train_color_regression.ipynb  train_drawing_segmentation.ipynb  utils.py
charts/research/: PlotColors.ipynb
charts/scripts/: export_to_torchscript.py  keep_only_last_checkpoints.py  render_pdf.sh  test_onnx.py  train_drawing_segmentation_legacy.py  train_regression.py  train_regression_gated.py  train_regression_lightning.py  train_regression_masked.py
python/: ColorRecognizerTrainingSetGenerator.ipynb  common.py  evaluate_model.py  generate_opencv_gt_images.py  generate_training_patches_from_training_images.py  train_tf_model.py
python/.ipynb_checkpoints/: AntiAliasing-checkpoint.ipynb  ColorRecognizerTrainingSetGenerator-checkpoint.ipynb
python/attic/: AntiAliasing.ipynb
(+19 files in other folders)
